fix align and select

--- a/style.css
+++ b/style.css
@@ -1,30 +1,40 @@
 img
 {
-    width: 100px;
-    /*height: 100px;*/
+    max-width: 100px;
+    max-height: 100px;
     margin-bottom: 5px;
     /*overflow: hidden;*/
 }
 
 .image
 {
-    /*width: 100px;*/
+    width: 100px;
     height: 100px;
     overflow: hidden;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
+.image img
+{
+
 }
 
 td, th {
     display: table-cell;
     vertical-align: top;
+    text-align: center;
 }
 
 .selected
 {
-    border: 4px ridge red;
+    border: 1px ridge red;
 }
 .unselected
 {
-    border: 4px dashed white;
+    border: 1px solid gray;
 }
 
 .btn {
